data/collection/fixes/descriptions/java/JDK-8222722
    public static void main(String[] args) {
        System.out.println(MyValue1?[].class);
    }

Test.java:39: error: illegal start of expression
        System.out.println(MyValue1?[].class);
                                    ^
Test.java:39: error: illegal start of expression
        System.out.println(MyValue1?[].class);
                                     ^
Test.java:39: error: <identifier> expected
        System.out.println(MyValue1?[].class);
                                       ^
Test.java:39: error: not a statement
        System.out.println(MyValue1?[].class);
                                      ^
Test.java:39: error: ';' expected
        System.out.println(MyValue1?[].class);
                                            ^
5 errors
